db listening and node running

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-MONGODB_URL=mongodb+srv://ckangel:Ckangel2025!@cluster0.mongodb.net/
+MONGODB_URL = mongodb+srv://ckangel:Ckangel2025!@cluster0.cz9zwrc.mongodb.net/project1
+
+
+
