deployed contacts & mongoDb

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-MONGODB_URL = mongodb+srv://ckangel:Ckangel2025!@cluster0.cz9zwrc.mongodb.net/project1 
+MONGODB_URI=mongodb+srv://ckangel:Ckangel2025!@cluster0.cz9zwrc.mongodb.net/project1
 
+PORT=3000
 
 
 
